--- a/package.json
+++ b/package.json
@@ -2,8 +2,16 @@
   "name": "flarum-client",
   "version": "0.1.3",
   "description": "A simple client to the api of the flarum forum",
+  "keywords": [
+    "flarum",
+    "forum",
+    "api"
+  ],
+  "bugs": "https://github.com/Boelensman1/flarum-client/issues",
+  "author": "Wigger Boelens <me@wiggerboelens.com> (http://wiggerboelens.com/)",
+  "repository": "Boelensman1/flarum-client",
   "main": "index.js",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -13,8 +21,6 @@
     "coverage:watch": "nodemon --exec 'npm run coverage --silent'"
   },
   "dependencies": {
-    "env-test": "^1.0.0",
-    "mocha-clean": "^1.0.0",
     "node-cache": "^4.1.0",
     "q": "^1.4.1",
     "superagent": "^3.0.0"
@@ -24,8 +30,10 @@
     "chai-as-promised": "^6.0.0",
     "chai-datetime": "^1.4.1",
     "chai-things": "^0.2.0",
+    "env-test": "^1.0.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.1.2",
+    "mocha-clean": "^1.0.0",
     "nodemon": "^1.11.0"
   }
 }
