Add url of docs
Signed-off-by: Boelensman1 <me@wiggerboelens.com>

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "forum",
     "api"
   ],
+  "url": "https://boelensman1.github.io/flarum-client/",
   "bugs": "https://github.com/Boelensman1/flarum-client/issues",
   "author": "Wigger Boelens <me@wiggerboelens.com> (http://wiggerboelens.com/)",
   "repository": "Boelensman1/flarum-client",
